--- a/index.html
+++ b/index.html
@@ -8,6 +8,36 @@
     <title>iMount</title>
 </head>
 <body>
+    <nav id="nav" class="navBar">
+        <a href="#">
+            <img src="" alt="iMount" class="logo">
+        </a>
+    </nav>
+    <div>
+        <h1>iMount</h1>
+    </div>
+    <footer id="footer">
+        <div class="footerMenus">
+            <div class="footerMenu">
+                <h1 class="fMenuTitle">Hours:</h1>
+                <ul class="fMenuList">
+                    <li class="fMenuItem">Mon - Thu: 2pm - 10pm</li>
+                    <li class="fMenuItem">Fri - Sat: 9am - 10pm</li>                    
+                </ul>
+            </div>
+            <div class="footerMenu">
+                <h1 class="fMenuTitle">Information</h1>
+                <ul class="fMenuList">
+                    <li class="fMenuItem">
+                        <a class="fMenuItemLink" href="/about">About Us</a>
+                    </li>
+                    <li class="fMenuItem">
+                        <a class="fMenuItemLink" href="/contact">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+        </div>    
+    </footer>
     <script src="./style.css"></script>
 </body>
 </html>
