--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <nav id="nav" class="navBar">
-        <a href="#">
-            <img src="" alt="iMount" class="logo">
+        <a class="logoLink" href="index.html">
+            <h1 class="logo">iMount</h1>
         </a>
     </nav>
     <div>
-        <h1>iMount</h1>
+        <h1>Home</h1>
     </div>
     <footer id="footer">
         <div class="footerMenus">
@@ -29,10 +29,10 @@
                 <h1 class="fMenuTitle">Information</h1>
                 <ul class="fMenuList">
                     <li class="fMenuItem">
-                        <a class="fMenuItemLink" href="/about">About Us</a>
+                        <a class="fMenuItemLink" href="/about.html">About Us</a>
                     </li>
                     <li class="fMenuItem">
-                        <a class="fMenuItemLink" href="/contact">Contact Us</a>
+                        <a class="fMenuItemLink" href="/contact.html">Contact Us</a>
                     </li>
                 </ul>
             </div>
