--- a/contact.html
+++ b/contact.html
@@ -16,14 +16,17 @@
     <div class="titleDiv">
         <h1 class="title">Contact Us</h1>
     </div>
-    <div class="subjectDiv">
-        <p class="subjectTitle">Subject:</p>
-        <input type="text" name="subjectName" id="subjectId">
-    </div>
-    <div class="bodyDiv">
-        <textarea name="body" placeholder="Your message here:" id="" cols="30" rows="10"></textarea>
-    </div>
-    <button class="submit">Submit</button>
+    <form action="https://formsubmit.co/c1c37dfed91e85c8eb27a428b840b284" method="POST">
+        <input type="hidden" name="_cc" value="stewartrob442@gmail.com">
+        <input type="text" name="_honey" style="display:none">
+        <!-- <input type="hidden" name="_captcha" value="false"> -->
+        <input type="hidden" name="_autoresponse" value="your custom message">
+        <input type="hidden" name="_next" value="https://imount.ga/contact.html">
+        <input type="text" name="name" placeholder="Name" required>
+        <input type="email" name="email" placeholder="Email" required>
+        <textarea name="message" cols="30" rows="8" placeholder="Your message here..." required></textarea>
+        <button type="submit">Send</button>
+   </form> 
     <footer id="footer">
         <div class="footerMenus">
             <div class="footerMenu">
