--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,9 @@
                 <h1 class="fMenuTitle">Information</h1>
                 <ul class="fMenuList">
                     <li class="fMenuItem">
+                        <a class="fMenuItemLink" href="/booking.html">Book Me!</a>
+                    </li>
+                    <li class="fMenuItem">
                         <a class="fMenuItemLink" href="/about.html">About Us</a>
                     </li>
                     <li class="fMenuItem">
